before pull from iogrow
Former-commit-id: 3636df679f09b72e13d97feb2352d27524d5e6ed [formerly b935f985f2f18f609d568b89a8cefd706bac341b] [formerly 101572dc5497532368a659985ec0a6ef7f0d09c6 [formerly a1622fd41fa5d4f7211338f1bd00bfa6f6f89d38]]
Former-commit-id: 7880009f9b069bffdeb8a6806c9d3ce70712d577 [formerly 46da1715fa91e68f769e4d5a96dc188b98f71b60]
Former-commit-id: cc0d90dd9a8364427db65b630ce44bf747c45965

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -273,6 +273,14 @@
                     </a>
                   </div>
                   <div class="pitch">
+                    <span>
+                      <i class="fa fa-phone"></i>
+                      +213661154278
+                    </span>
+                    <span>
+                      <i class="fa fa-envelope"></i>
+                      contact@nearbee.com
+                    </span>
                     <span  ng-show="account.account_type">
                         <a href="/#/search/type:Account <%=account.account_type%>"> <%= account.account_type %></a>
                     </span>
@@ -419,6 +427,7 @@
         </div>
     </div>
 </div>
+
       <!--assign tags model-->
    <div id="assigneeTagsToTask" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
           <div class="modal-dialog">
