--- a/templates/base.html
+++ b/templates/base.html
@@ -440,8 +440,8 @@
 
   <script type="text/javascript">
 
-     //  var ROOT = '/_ah/api';   
-    var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+     // var ROOT = '/_ah/api';   
+     var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
     var apisToLoad;
     var callback = function() {
@@ -588,7 +588,7 @@
   <script src="/static/plugins/respond.min.js"></script>
   <![endif]-->
 
-<script src="http://maps.google.com/maps/api/js?key=AIzaSyDHuaxvm9WSs0nu-FrZhZcmaKzhvLiSczY&sensor=true" type="text/javascript"></script>
+<script src="http://maps.google.com/maps/api/js?v=3.exp&libraries=places&key=AIzaSyDHuaxvm9WSs0nu-FrZhZcmaKzhvLiSczY&sensor=true" type="text/javascript"></script>
 <script type="text/javascript">
 
 </script>
