fix the share setting in all tabs fix #1194
Former-commit-id: eb463e06e2a31b2c39d632da7e3b0530e4af79f2 [formerly f950b86661cd86b267a279dc61ab969f1e9f2a12] [formerly c3f69314b5297d5e1435ea1f85318eed7dd7bde3 [formerly 4df543a9f465b4ddc362aab55aed998bf373ce77]]
Former-commit-id: cead37f50e71e73398ab581e366b635739ea9708 [formerly fac866f0a9d173772715a6da57dbd746e1251b45]
Former-commit-id: b5e385b0719d92bc460f76416adb5cffd125385c

--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -2131,65 +2131,70 @@
 
 
 <div id="sharingSettingsModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-           <div class="modal-dialog">
-              <div class="modal-content">
-              <div class="modal-header">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3 id="myModalLabel" class="modal-title">{{_("Sharing Settings")}}</h3>
-              </div>
-              <div class="modal-body">
+            </div>
+            <div class="modal-body">
+                <form id="addMember" name="addaccount" class="form-horizontal">
+                    <p>{{ _("Who has access:")}}</p>
+                    <div  class="radio-list" ng-show="contact.owner.google_user_id=={{ME}}">
+                        <label>
+                            <input type="radio" name="optionRadio" value="public" ng-model="contact.access" ng-click="share();"/>
+                            {{ _("public: Anyone within your organization can access and find")}}
+                        </label>
+                        <label >
+                            <input type="radio" name="optionRadio"  value="private" ng-model="contact.access" ng-click="share();"/>
+                            {{ _("private: only you and your collaborators")}}
+                        </label>
+                    </div>
+                    <div ng-hide="contact.owner.google_user_id=={{ME}}">
 
-                 <form id="addMember" name="addaccount"  class="form-horizontal">
-
-
-
-                    <p>{{ _("Who has access:") }}</p>
-                    <div class="radio-list">
-
-                            <label >
-                            <input type="radio" name="optionRadio" value="public" ng-model="contact.access" ng-click="share()"/>
-                            {{ _("public: Anyone within your organization can access and find") }}
-                            </label>
-                            <label >
-                            <input type="radio" name="optionRadio"  value="private" ng-model="contact.access" ng-click="share()"/>
-                            {{ _("private: only you and your collaborators") }}
-                            </label>
+                        <label>{{ _("you can't edit this  you are not the owner")}} </label> <br>
+                        <label>{{ _("The owner is:")}}</label>
+                          <div class="invitation">
+                            <img class="google-avatar" ng-src="<%=contact.owner.google_public_profile_photo_url%>"/>
+                            <%=contact.owner.display_name%> <  <a> <%=contact.owner.email%> </a> >
+                        </div>
                     </div>
                     <hr/>
                     <div class='' id="collaborators">
-                    <p>{{ _("Collaborators:") }}</p>
+                        <p>{{ _("Collaborators:")}}</p>
                         <div ng-repeat="collaborator in collaborators_list" class="invitation">
-                          <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
-                           <%=collaborator.display_name%> < <%=collaborator.email%> >
+                            <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
+                            <%=collaborator.display_name%> <  <a> <%=collaborator.email%> </a> > 
+                            <button class ="btn" ng-hide="contact.owner.google_user_id==collaborator.google_user_id || contact.access=='public' || contact.owner.google_user_id!={{ME}}" ng-click="DeleteCollaborator(collaborator.entityKey)">x</button>
                         </div>
 
                     </div>
                     <hr/>
 
-                    <div class=''>
-                    <p>{{ _("Invited user:") }}</p>
-                    <div class="invitation" ng-repeat="invited in sharing_with">
-                      <img class="google-avatar" src="<%= invited.google_public_profile_photo_url%>"/>
-                        <strong> <%= invited.google_display_name %> < <%=invited.email%> ></strong>
-                      <hr/>
-                    </div>
+                    <div ng-show="contact.owner.google_user_id=={{ME}}">
+                        <p>{{ _("Invited user:")}}</p>
+                        <div class="invitation" ng-repeat="invited in sharing_with">
+                            <img class="google-avatar" src="<%= invited.google_public_profile_photo_url%>"/>
+                            <strong> <%= invited.google_display_name %> < <%=invited.email%> ></strong>
+                            <hr/>
+                        </div>
 
-                    <p>{{ _("Invite collaborators:") }}</p>
-                    <div class="form-group">
-                      <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="form-control" placeholder="{{ _('Enter name or email addresse to add people to this group') }}">
-                    </div>
+                        <p>{{ _("Invite collaborators:")}}</p>
+                        <div class="form-group">
+                            <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="form-control" placeholder="{{ _('Enter name or email addresse to add people to this group')}}">
+                        </div>
 
-                      </div>
-              </div>
-              <div class="modal-footer">
+                    </div>
+            </div>
+            <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" data-dismiss="modal" aria-hidden="true" ng-click="share()" class="btn blue addContactNow">{{_("Share")}}</button>
-              </div>
-               </form>
-               </div>
-               </div>
+                <button  type="submit"  ng-click="share()" data-dismiss="modal" aria-hidden="true" class="btn blue addContactNow">{{_("Share")}}</button>
+            </div>
+            </form>
+        </div>
+    </div>
 
-       </div>
+</div>
 
 <div id="BeforedeleteAccount" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
