--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -2523,12 +2523,10 @@
                 <h3 id="myModalLabel" class="modal-title">{{_("Sharing Settings")}}</h3>
             </div>
             <div class="modal-body">
-                <form id="addMember" name="addaccount"  class="form-horizontal">
-
+                <form id="addMember" name="addaccount" class="form-horizontal">
                     <p>{{ _("Who has access:")}}</p>
                     <div  class="radio-list" ng-show="account.owner.google_user_id=={{ME}}">
-
-                        <label >
+                        <label>
                             <input type="radio" name="optionRadio" value="public" ng-model="account.access" ng-click="share();"/>
                             {{ _("public: Anyone within your organization can access and find")}}
                         </label>
@@ -2538,25 +2536,27 @@
                         </label>
                     </div>
                     <div ng-hide="account.owner.google_user_id=={{ME}}">
-                        <label>you can't edit this  you are not the owner </label>
+
+                        <label>{{ _("you can't edit this  you are not the owner")}} </label> <br>
+                        <label>{{ _("The owner is:")}}</label>
+                          <div class="invitation">
+                            <img class="google-avatar" ng-src="<%=account.owner.google_public_profile_photo_url%>"/>
+                            <%=account.owner.display_name%> <  <a> <%=account.owner.email%> </a> >
+                        </div>
                     </div>
                     <hr/>
                     <div class='' id="collaborators">
                         <p>{{ _("Collaborators:")}}</p>
                         <div ng-repeat="collaborator in collaborators_list" class="invitation">
                             <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
-                            <%=collaborator.display_name%> <  <a> <%=collaborator.email%> </a> > <button class ="btn" ng-hide="account.owner.google_user_id==collaborator.google_user_id || lead.access=='public'" ng-click="DeleteCollaborator(collaborator.entityKey)">x</button>
-
-
-
+                            <%=collaborator.display_name%> <  <a> <%=collaborator.email%> </a> > 
+                            <button class ="btn" ng-hide="account.owner.google_user_id==collaborator.google_user_id || account.access=='public' || account.owner.google_user_id!={{ME}}" ng-click="DeleteCollaborator(collaborator.entityKey)">x</button>
                         </div>
 
                     </div>
-                   
+                    <hr/>
 
-                     <hr/>
-
-                    <div class=''>
+                    <div ng-show="account.owner.google_user_id=={{ME}}">
                         <p>{{ _("Invited user:")}}</p>
                         <div class="invitation" ng-repeat="invited in sharing_with">
                             <img class="google-avatar" src="<%= invited.google_public_profile_photo_url%>"/>
@@ -2573,7 +2573,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" data-dismiss="modal" aria-hidden="true" ng-click="share()" class="btn blue addContactNow">{{_("Share")}}</button>
+                <button  type="submit"  ng-click="share()" data-dismiss="modal" aria-hidden="true" class="btn blue addContactNow">{{_("Share")}}</button>
             </div>
             </form>
         </div>
