--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -854,71 +854,70 @@
       <!-- END PAGE CONTAINER-->
 </div>
 <div id="sharingSettingsModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-           <div class="modal-dialog">
-              <div class="modal-content">
-              <div class="modal-header">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3 id="myModalLabel" class="modal-title">{{_("Sharing Settings")}}</h3>
-              </div>
-              <div class="modal-body">
-                 <form id="addMember" name="addaccount" class="form-horizontal">
-                  <fieldset>
+            </div>
+            <div class="modal-body">
+                <form id="addMember" name="addaccount" class="form-horizontal">
+                    <p>{{ _("Who has access:")}}</p>
+                    <div  class="radio-list" ng-show="opportunity.owner.google_user_id=={{ME}}">
+                        <label>
+                            <input type="radio" name="optionRadio" value="public" ng-model="opportunity.access" ng-click="share();"/>
+                            {{ _("public: Anyone within your organization can access and find")}}
+                        </label>
+                        <label >
+                            <input type="radio" name="optionRadio"  value="private" ng-model="opportunity.access" ng-click="share();"/>
+                            {{ _("private: only you and your collaborators")}}
+                        </label>
+                    </div>
+                    <div ng-hide="opportunity.owner.google_user_id=={{ME}}">
 
-                    <p>{{ _('Who has access:')}}</p>
-                    <div class=''>
-
-
-
-                            <label class="radio line">
-                            <input type="radio" value="public" ng-click="share()" ng-model="opportunity.access" />
-                            {{ _('public: Anyone within your organization can access and find')}}
-                            </label>
-                            <label class="radio line">
-                            <input type="radio"  value="private" ng-click="share()" ng-model="opportunity.access" />
-                            {{ _('private: only you and your collaborators')}}
-                            </label>
-
-
-
+                        <label>{{ _("you can't edit this  you are not the owner")}} </label> <br>
+                        <label>{{ _("The owner is:")}}</label>
+                          <div class="invitation">
+                            <img class="google-avatar" ng-src="<%=opportunity.owner.google_public_profile_photo_url%>"/>
+                            <%=opportunity.owner.display_name%> <  <a> <%=opportunity.owner.email%> </a> >
+                        </div>
                     </div>
                     <hr/>
                     <div class='' id="collaborators">
-                    <p>{{ _('Collaborators:')}}</p>
+                        <p>{{ _("Collaborators:")}}</p>
                         <div ng-repeat="collaborator in collaborators_list" class="invitation">
-                          <img class="google-avatar" src="<%=collaborator.img%>"/>
-                           <%=collaborator.display_name%> < <%=collaborator.email%> >
+                            <img class="google-avatar" ng-src="<%=collaborator.img%>"/>
+                            <%=collaborator.display_name%> <  <a> <%=collaborator.email%> </a> > 
+                            <button class ="btn" ng-hide="opportunity.owner.google_user_id==collaborator.google_user_id || opportunity.access=='public' || opportunity.owner.google_user_id!={{ME}}" ng-click="DeleteCollaborator(collaborator.entityKey)">x</button>
                         </div>
 
                     </div>
                     <hr/>
 
-                    <div class=''>
-                     <p>{{ _("Invited user:") }}</p>
-                    <div class="invitation" ng-repeat="invited in sharing_with">
-                      <img class="google-avatar" src="<%= invited.google_public_profile_photo_url%>"/>
-                        <strong> <%= invited.google_display_name %> < <%=invited.email%> ></strong>
+                    <div ng-show="opportunity.owner.google_user_id=={{ME}}">
+                        <p>{{ _("Invited user:")}}</p>
+                        <div class="invitation" ng-repeat="invited in sharing_with">
+                            <img class="google-avatar" src="<%= invited.google_public_profile_photo_url%>"/>
+                            <strong> <%= invited.google_display_name %> < <%=invited.email%> ></strong>
+                            <hr/>
+                        </div>
+
+                        <p>{{ _("Invite collaborators:")}}</p>
+                        <div class="form-group">
+                            <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="form-control" placeholder="{{ _('Enter name or email addresse to add people to this group')}}">
+                        </div>
+
                     </div>
-                     <hr/>
-
-                    <p>{{ _('Invite collaborators:')}}</p>
-                    <div class="form-group">
-                      <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="form-control" placeholder="{{_('Enter name or email addresse to add people to this group')}}">
-                    </div>
-
-                      </div>
-
-                    </fieldset>
-
-              </div>
-              <div class="modal-footer">
+            </div>
+            <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
                 <button  type="submit"  ng-click="share()" data-dismiss="modal" aria-hidden="true" class="btn blue addContactNow">{{_("Share")}}</button>
-              </div>
-               </form>
-               </div>
-               </div>
+            </div>
+            </form>
+        </div>
+    </div>
 
-       </div>
+</div>
         <!--HKA 24.12.2013 Modal before Deleting Case-->
          <div id="BeforedeleteOpportunity" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
