Add url to user on comment list (Task show controller)
Former-commit-id: 81261c18564f6fdee564fb5de258373a08c10a9e [formerly 4148925d01ad7ca7edd93e39a1847ee26866c9cc] [formerly 47c9057202c5270b8374557671988f743bc48a07 [formerly 52b8e4d4bbbd206c563d25ca18241644e797fd6b]]
Former-commit-id: f1baa05213e7366261b85f6cbe7be069f0d6bc6a [formerly 857921e999c443b1a8c73ab858d01552d70a6876]
Former-commit-id: c61a1264900560cb4fef81b04d30e80254cba9b8

--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -312,7 +312,7 @@
                           <img class="avatar" alt="" ng-src="<%=comment.author.photo%>" />
                           <div class="message">
                             <span class="arrow"></span>
-                            <a href="#" class="name"><%=comment.author.display_name%></a>
+                            <a href="/#/admin/users/show/<%=comment.author.google_user_id%>" class="name"><%=comment.author.display_name%> </a>
                             <span class="datetime">at <%=comment.updated_at | date:'yyyy-MM-dd - HH:mm:ss '%></span>
                             <span class="body">
                             <%=comment.content%>
