--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 <link href="//fonts.googleapis.com/css?family=Exo+2:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic&subset=latin" rel="stylesheet" type="text/css" />
   <!-- END GLOBAL MANDATORY STYLES -->
 
-  <link  rel="shortcut icon" href="favicon.ico" />
+  <link  rel="shortcut icon" href="/favicon.ico" />
 
   <!-- BEGIN PAGE LEVEL PLUGIN STYLES -->
 
@@ -443,9 +443,9 @@
 
 
 
-   //var ROOT = '/_ah/api';
+   var ROOT = '/_ah/api';
    
-   var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+   //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
