improve the sign-in process
Former-commit-id: 02c462c309a72dc1a23701aad7db61e4360726c1 [formerly a1f80da9613e008480e4c825e06220eacce479eb] [formerly 7314601b999c34004dacbcafedee317abb9f8547 [formerly 01cf9726773ca4941551ca0657c04a003fd214d8]]
Former-commit-id: 1d0553ec47ad4663aa87f2f46c1e3e8842348e2a [formerly 34326445649a71a76756739e863c92b0b8668d90]
Former-commit-id: 6135e8621234a393f50d19e06842bf67a2f47687

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="">
         <meta name="author" content="Daniely Wright">
         <link href="/static/welcome/ico/favicon.png" rel="shortcut icon" >
-        <title>ioGrow - CRM for startups</title>
+        <title>ioGrow - Generate Leads, Close more Deals and Grow faster</title>
 
         <!-- Bootstrap core CSS -->
         <link href="/static/welcome/css/bootstrap.min.css" rel="stylesheet">
@@ -193,7 +193,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="/welcome/">
-                        <img src="http://storage.googleapis.com/iogrow-gs/static/img/ioGrow_welcome_logo.png" style="margin-top: -28px;padding-top: 10px;height:45px;">
+                        <img src="http://storage.googleapis.com/iogrow-gs/static/iogrow_material_design_logo_welcome.png" style="margin-top: -28px;padding-top: 10px;height:68px;">
                     </a>
                 </div>
 
@@ -358,7 +358,7 @@
                               <span class="buttonText">Start using ioGrow!</span></a>
                             </div>
                           </div>
-                        <h1>Better way for Startups to do CRM</h1>
+                        <h1>Generate Leads, Close more Deals and Grow faster</h1>
 <br>
                         
 
