--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -1102,18 +1102,31 @@ function onSignInCallback(authResult) {
 <img class="profile-img" src="/static/img/avatar_2x.png" alt="">
 <p class="profile-name"></p>
 <div class="google-sign">
+  {%if user %}
   <button class="g-signin"
-                              data-scope="https://www.googleapis.com/auth/gmail.compose https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://www.googleapis.com/auth/bigquery"
+                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://mail.google.com https://www.googleapis.com/auth/gmail.compose"
                               data-requestvisibleactions="http://schemas.google.com/AddActivity"
                               data-clientId="{{ CLIENT_ID }}"
-                              data-accesstype="offline"
-                              data-approvalprompt="force"
                               data-callback="onSignInCallback"
                               data-theme="dark"
                               data-cookiepolicy="single_host_origin"
                               data-width="wide"
                               data-height="tall">
                           </button>
+  {%else%}
+  <button class="g-signin"
+                              data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/plus.profile.emails.read https://www.googleapis.com/auth/drive https://www.googleapis.com/auth/calendar  https://www.google.com/m8/feeds https://mail.google.com https://www.googleapis.com/auth/gmail.compose"
+                              data-requestvisibleactions="http://schemas.google.com/AddActivity"
+                              data-clientId="{{ CLIENT_ID }}"
+                              data-callback="onSignInCallback"
+                              data-accesstype="offline"
+                              data-approvalprompt="force"
+                              data-theme="dark"
+                              data-cookiepolicy="single_host_origin"
+                              data-width="wide"
+                              data-height="tall">
+                          </button>
+  {%endif%}
 </div>
 </div>
 <div class="one-google">
