before pull from iogrow after push
Former-commit-id: 0cc71d6b78f5c99bc11d7901ff46f19fd271c3f2 [formerly 3e554301e139b706bdc55a334dcc1be321dcd820] [formerly 9e35f38310c2fa8092d156c04abc31349f9911fb [formerly 53d601987b8edb4a930a1d569d3779a265a3317c]]
Former-commit-id: bf495baf3624f2f08e7f6674185bba4e5464839a [formerly 1839d447baa2bc838ae1805bc6b481fda148836b]
Former-commit-id: 2f0eee7f302b9c2bfb9fd431a9816b27f0effb85

--- a/templates/accounts/account_new.html
+++ b/templates/accounts/account_new.html
@@ -144,12 +144,12 @@
                                 </div>-->
                                    <ul class="list-unstyled contact-infos infoslist">
                                       <li ng-repeat="phone in phones"> 
-                                          <%=phone.number%>  -  <%=phone.type%> 
+                                          <%=phone.number%> 
                                           <button type="button" class="close closeContactForm" tabindex='-1' ng-click="deleteInfos(phones,$index)" data-dismiss="alert"></button>
                                      </li>
                                   </ul>
                                   <form class="form-inline newLeadForm" role="form">
-                                      <div class="form-group input-icon l-sm-inline" style="width:64%;">
+                                      <div class="input-icon">
                                          <i class="fa fa-phone"></i>
                                         <input
                                           type="text"
@@ -160,15 +160,6 @@
                                           ng-model="phone.number"
                                           placeholder="{{_('Add a number')}}"
                                           >
-                                      </div>
-                                      <div class="form-group sm-group r-sm-inline" style="">
-                                        <label class="sr-only" for="exampleInputPassword2">{{_('Type')}}</label>
-                                        <select ng-model="phone.type" class="form-control">
-                                          <option value="home" selected="selected" >{{_('home')}}</option>
-                                          <option>{{_('work')}}</option>
-                                          <option>{{_('mobile')}}</option>
-                                          <option>{{_('other')}}</option>
-                                        </select>
                                       </div>
                                       
                                            <!--
